--- a/index.html
+++ b/index.html
@@ -672,6 +672,27 @@ footer{
   }
 }
 
+  @media (min-width: 1920px){
+  #about .content{
+    gap: -15px;
+  }
+}
+
+  /* ===== CONTACT FIXED BOTTOM ===== */
+
+#contact{
+  align-items:flex-end;
+}
+
+#contact .content{
+  width:100%;
+  padding-bottom:140px;
+}
+
+.contact-grid{
+  max-width:960px;
+}
+
 
   
 </style>
