--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ header{
   position:fixed;
   top:0;
   width:100%;
-  padding:34px 40px;
+  :34px 40px;
   display:flex;
   align-items:center;
   justify-content:space-between;
@@ -105,7 +105,7 @@ nav a{
   letter-spacing:.18em;
   text-transform:uppercase;
   position:relative;
-  padding-bottom:6px;
+  -bottom:6px;
   cursor:pointer;
   opacity:0;
   transform:translateY(-12px);
@@ -170,7 +170,7 @@ nav a:hover::after{
   text-transform:uppercase;
   cursor:pointer;
   position:relative;
-  padding-bottom:6px;
+  -bottom:6px;
   opacity:1; /* Aseguramos que no haya fundido */
   line-height:1; /* ← añade esto */
 
@@ -309,7 +309,7 @@ footer{
   position:fixed;
   bottom:0;
   width:100%;
-  padding:18px 40px;
+  :18px 40px;
   text-align:center;
   font-size:11px;
   letter-spacing:.08em;
@@ -329,7 +329,7 @@ footer{
 /* ===== BUTTON ===== */
 .btn{
   margin-top:14px;
-  padding:14px 34px;
+  :14px 34px;
   border-radius:40px;
   border:none;
   background:#fff;
@@ -390,7 +390,7 @@ footer{
   bottom: 0;
   background: rgba(0, 0, 0, 0.5);
   color: #fff;
-  padding: 20px;
+  : 20px;
   opacity: 0;
   transition: opacity 0.3s ease;
   display: flex;
@@ -423,7 +423,7 @@ footer{
 .cv-column ul {
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  : 0;
 }
 
 .cv-column li {
@@ -458,7 +458,7 @@ footer{
   display:flex;
   align-items:center;
   gap:20px;
-  padding:28px 32px;
+  :28px 32px;
   border-radius:22px;
   text-decoration:none;
   color:var(--white);
@@ -547,7 +547,7 @@ footer{
   background:#0e0e11;
   border:1px solid rgba(255,255,255,.18);
   border-radius:28px;
-  padding:46px;
+  :46px;
   width:420px;
   max-width:90%;
   text-align:center;
@@ -579,7 +579,7 @@ footer{
 }
 
 .modal-actions a{
-  padding:12px 26px;
+  :12px 26px;
   border-radius:30px;
   background:#fff;
   color:#000;
@@ -648,7 +648,7 @@ footer{
 @media (min-width: 1920px){
 
   nav a{
-    padding-bottom: 6px;
+    -bottom: 6px;
   }
 
   nav a::after{
@@ -656,7 +656,7 @@ footer{
   }
 
   .lang-switch button{
-    padding-bottom: 6px;
+    -bottom: 6px;
   }
 
   .lang-switch button::after{
@@ -686,7 +686,7 @@ footer{
 
 #contact .content{
   width:100%;
-  padding-bottom:140px;
+  padding-bottom:100px;
 }
 
 .contact-grid{
