--- a/index.html
+++ b/index.html
@@ -467,6 +467,33 @@ footer{
   transition: border-color .3s, transform .3s;
 }
 
+  .contact-item{
+  position: relative;
+  overflow: hidden;
+}
+
+/* Glow */
+.contact-item::before{
+  content:"";
+  position:absolute;
+  inset:0;
+  border-radius:inherit;
+  background: radial-gradient(
+    280px circle at var(--x, 50%) var(--y, 50%),
+    rgba(255,255,255,0.22),
+    rgba(255,255,255,0.08) 40%,
+    transparent 60%
+  );
+  opacity:0;
+  transition: opacity .3s ease;
+  pointer-events:none;
+}
+
+.contact-item:hover::before{
+  opacity:1;
+}
+
+
 .contact-item i{
   font-size: 18px;
   opacity: .9;
