--- a/index.html
+++ b/index.html
@@ -799,15 +799,24 @@ footer{
         <i class="fas fa-envelope"></i>
         <div>
           <span class="contact-label">Email</span>
-          <span class="contact-value">luis@email.com</span>
+          <span class="contact-value">luisblascoibanezberbel@gmail.com</span>
         </div>
       </a>
+
+      <a href="tel:+34630511806" class="contact-item">
+  <i class="fas fa-phone-alt"></i>
+  <div>
+    <span class="contact-label">Teléfono</span>
+    <span class="contact-value">+34 630 511 806</span>
+  </div>
+</a>
+
 
       <a href="https://linkedin.com/in/tuusuario" target="_blank" class="contact-item">
         <i class="fab fa-linkedin-in"></i>
         <div>
           <span class="contact-label">LinkedIn</span>
-          <span class="contact-value">linkedin.com/in/tuusuario</span>
+          <span class="contact-value">https://www.linkedin.com/in/luisblasiber/</span>
         </div>
       </a>
 
