--- a/index.html
+++ b/index.html
@@ -573,8 +573,8 @@ footer{
     margin-top: -180px;
   }
 
-  #contact h2{
-    margin-top: -160px;
+  #contact .content{
+  transform: translateY(80px);
   }
 }
 
