--- a/index.html
+++ b/index.html
@@ -574,8 +574,9 @@ footer{
   }
 
   #contact .content{
-  transform: translateY(50px);
+  padding-top: 80px;
   }
+
 }
 
 /* ===== AJUSTE LÍNEAS DECORATIVAS – PANTALLA GRANDE ===== */
