--- a/index.html
+++ b/index.html
@@ -253,9 +253,7 @@ h2{
   margin-top: -206px;
 }
 
-#contact h2{
-  margin-top: -220px;
-}
+
 
 
 p{
@@ -448,6 +446,13 @@ footer{
 
   /* ===== CONTACT SECTION ===== */
 
+#contact .content{
+  transform: none;
+  padding-top: 160px;
+}
+
+
+  
 .contact-grid{
   display:grid;
   grid-template-columns: repeat(2, 1fr);
@@ -573,9 +578,10 @@ footer{
     margin-top: -180px;
   }
 
-  #contact .content{
-  padding-top: 80px;
+  #contact h2{
+    margin-top: -280px;
   }
+
 
 }
 
