--- a/index.html
+++ b/index.html
@@ -446,10 +446,15 @@ footer{
 
   /* ===== CONTACT SECTION ===== */
 
+#contact{
+  align-items: flex-start;
+}
+
 #contact .content{
   transform: none;
-  padding-top: -1000px;
+  padding-top: 220px;
 }
+
 
 
   
