--- a/index.html
+++ b/index.html
@@ -451,9 +451,13 @@ footer{
 }
 
 #contact .content{
-  transform: none;
-  padding-top: 220px;
+  transform: none !important;
 }
+
+#contact h2{
+  margin-top: -200px;
+}
+
 
 
 
