--- a/index.html
+++ b/index.html
@@ -464,9 +464,10 @@ footer{
   
 .contact-grid{
   display:grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr;
   gap:26px;
   margin-top:10px;
+  max-width: 420px;
 }
 
 
@@ -840,13 +841,7 @@ footer{
         </div>
       </a>
 
-      <div class="contact-item no-link">
-        <i class="fas fa-map-marker-alt"></i>
-        <div>
-          <span class="contact-label">Ubicación</span>
-          <span class="contact-value">Valencia, España</span>
-        </div>
-      </div>
+     
     </div>
   </div>
 </section>
