--- a/index.html
+++ b/index.html
@@ -262,8 +262,9 @@ p{
 }
 
 .about-image img{
-  width:300px;
-  display:block;
+  width:335px;
+  transform: scale(0.85);
+  transform-origin: top right;
 }
 
 .about-image{
