--- a/index.html
+++ b/index.html
@@ -221,6 +221,11 @@ nav a:hover::after{
 
 }
 
+  /* ===== HOME OVERRIDE ===== */
+#home .content{
+  padding-top: 240px;
+}
+
 
 /* ===== TEXT ===== */
 h1{
