--- a/index.html
+++ b/index.html
@@ -796,8 +796,13 @@ footer{
   <div class="content">
     <h2 class="fade-up">Contacto</h2>
 
+    <p class="fade-up delay-1" style="max-width:520px">
+      Si te interesa mi perfil o quieres hablar sobre un proyecto, estaré encantado de conocerte.
+    </p>
+
     <div class="contact-grid fade-up delay-2">
-      <a href="mailto:luis@email.com" class="contact-item">
+      
+      <a href="mailto:luisblascoibanezberbel@gmail.com" class="contact-item">
         <i class="fas fa-envelope"></i>
         <div>
           <span class="contact-label">Email</span>
@@ -806,23 +811,21 @@ footer{
       </a>
 
       <a href="tel:+34630511806" class="contact-item">
-  <i class="fas fa-phone-alt"></i>
-  <div>
-    <span class="contact-label">Teléfono</span>
-    <span class="contact-value">+34 630 511 806</span>
-  </div>
-</a>
-
-
-      <a href="https://linkedin.com/in/tuusuario" target="_blank" class="contact-item">
-        <i class="fab fa-linkedin-in"></i>
+        <i class="fas fa-phone-alt"></i>
         <div>
-          <span class="contact-label">LinkedIn</span>
-          <span class="contact-value">https://www.linkedin.com/in/luisblasiber/</span>
+          <span class="contact-label">Teléfono</span>
+          <span class="contact-value">+34 630 511 806</span>
         </div>
       </a>
 
-     
+      <a href="https://www.linkedin.com/in/luisblasiber/" target="_blank" class="contact-item">
+        <i class="fab fa-linkedin-in"></i>
+        <div>
+          <span class="contact-label">LinkedIn</span>
+          <span class="contact-value">linkedin.com/in/luisblasiber</span>
+        </div>
+      </a>
+
     </div>
   </div>
 </section>
