--- a/index.html
+++ b/index.html
@@ -444,25 +444,28 @@ footer{
 
   
 .contact-grid{
-  display:grid;
+  display: grid;
   grid-template-columns: 1fr;
-  gap:26px;
-  margin-top:10px;
-  max-width: 420px;
+  gap: 22px;
+  margin-top: 28px;
+  max-width: 460px;
 }
+
 
 
 .contact-item{
   display: flex;
   align-items: center;
   gap: 18px;
-  padding: 22px 26px;
-  border: 1.35px solid rgba(255,255,255,0.2);
-  border-radius: 18px;
+  padding: 20px 24px;
+  border: 1px solid rgba(255,255,255,0.18);
+  border-radius: 16px;
   text-decoration: none;
   color: var(--white);
-  transition: border-color .3s, transform .3s;
+  background: transparent;
+  transition: border-color .35s ease, transform .35s ease;
 }
+
 
   .contact-item{
   position: relative;
@@ -486,33 +489,35 @@ footer{
   pointer-events:none;
 }
 
-.contact-item:hover::before{
-  opacity:1;
-}
-
 
 .contact-item i{
-  font-size: 18px;
-  opacity: .9;
+  font-size: 16px;
+  opacity: .75;
 }
+
 
 .contact-item:hover{
-  border-color: rgba(255,255,255,0.4);
-  transform: translateY(-2px);
+  border-color: rgba(255,255,255,0.38);
+  transform: translateY(-1px);
 }
 
+
 .contact-label{
-  font-size: 11px;
-  letter-spacing: .18em;
+  font-size: 10px;
+  letter-spacing: .22em;
   text-transform: uppercase;
   color: var(--muted);
+  margin-bottom: 2px;
   display: block;
 }
+
 
 .contact-value{
   font-size: 14px;
   line-height: 1.4;
+  color: var(--white);
 }
+
 
 .contact-item.no-link{
   cursor: default;
