--- a/index.html
+++ b/index.html
@@ -815,13 +815,13 @@ footer{
         </div>
       </a>
 
-      <a href="tel:+34630511806" class="contact-item">
+     <div class="contact-item no-link">
         <i class="fas fa-phone-alt"></i>
         <div>
           <span class="contact-label">Teléfono</span>
           <span class="contact-value">+34 630 511 806</span>
-        </div>
-      </a>
+       </div>
+    </div>
 
       <a href="https://www.linkedin.com/in/luisblasiber/" target="_blank" class="contact-item">
         <i class="fab fa-linkedin-in"></i>
