--- a/index.html
+++ b/index.html
@@ -584,8 +584,8 @@ footer{
 
 
 .contact-item:hover{
-  border-color: rgba(255,255,255,0.48);
-  transform: translateY(-0.5px);
+  border-color: rgba(255,255,255,0.42);
+  transform: none;
 }
 
 
@@ -661,7 +661,29 @@ footer{
     margin-top: -180px;
   }
 
-  
+
+  /* ===== CONTACT – PREMIUM ENTRANCE ===== */
+
+.contact-item{
+  opacity: 0;
+  transform: translateY(12px);
+  filter: blur(6px);
+  animation: contactReveal 0.9s cubic-bezier(.22,.61,.36,1) forwards;
+}
+
+/* Stagger suave */
+.contact-item:nth-child(1){ animation-delay: .15s; }
+.contact-item:nth-child(2){ animation-delay: .30s; }
+.contact-item:nth-child(3){ animation-delay: .45s; }
+
+@keyframes contactReveal{
+  to{
+    opacity: 1;
+    transform: translateY(0);
+    filter: blur(0);
+  }
+}
+
 
 
 }
