--- a/index.html
+++ b/index.html
@@ -434,52 +434,7 @@ footer{
   line-height: 1.9;
 }
 
-  /* ===== SKILLS – TAG BUTTONS ===== */
-
-.skills-grid{
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 64px;
-  margin-top: 10px;
-}
-
-.skill-block{
-  display: flex;
-  flex-direction: column;
-  gap: 18px;
-}
-
-.skill-title{
-  font-size: 11px;
-  letter-spacing: .32em;
-  text-transform: uppercase;
-  color: var(--white);
-  opacity: .9;
-}
-
-.skill-tags{
-  display: flex;
-  flex-wrap: wrap;
-  gap: 12px;
-}
-
-.skill-tag{
-  padding: 10px 16px;
-  border-radius: 999px;
-  border: 1.4px solid rgba(255,255,255,0.32);
-  font-size: 13px;
-  color: var(--white);
-  background: transparent;
-  white-space: nowrap;
-  cursor: default;
-  transition: border-color .35s ease, background .35s ease;
-}
-
-.skill-tag:hover{
-  border-color: rgba(255,255,255,0.55);
-  background: rgba(255,255,255,0.04);
-}
-
+ 
 
 
 /* ===== CV STYLING ===== */
@@ -722,6 +677,38 @@ footer{
   }
 }
 
+  /* ===== SKILLS – SOFTWARE GRID ===== */
+
+.software-grid{
+  display: grid;
+  grid-template-columns: repeat(6, 1fr); /* ← 6 por fila = 2 líneas */
+  gap: 22px;
+  margin-top: 40px;
+}
+
+.software-item{
+  padding: 26px 18px;
+  border: 1.5px solid rgba(255,255,255,0.28);
+  border-radius: 16px;
+  text-align: center;
+  font-size: 13px;
+  letter-spacing: .08em;
+  text-transform: uppercase;
+  color: var(--white);
+  background: transparent;
+  transition: 
+    border-color .35s ease,
+    transform .35s ease,
+    background .35s ease;
+}
+
+/* Hover premium */
+.software-item:hover{
+  border-color: rgba(255,255,255,0.5);
+  background: rgba(255,255,255,0.04);
+  transform: translateY(-2px);
+}
+
   
 </style>
 </head>
@@ -867,49 +854,26 @@ footer{
   </div>
 </section>
 
-  <section id="skills" class="section">
+ <section id="skills" class="section">
   <div class="content">
     <h2 class="fade-up">Habilidades</h2>
 
-    <div class="skills-grid fade-up delay-2">
-
-      <div class="skill-block">
-        <span class="skill-title">Diseño</span>
-        <div class="skill-tags">
-          <span class="skill-tag">Desarrollo de concepto</span>
-          <span class="skill-tag">Lenguaje formal</span>
-          <span class="skill-tag">Diseño centrado en el usuario</span>
-          <span class="skill-tag">Diseño para uso colectivo</span>
-        </div>
-      </div>
-
-      <div class="skill-block">
-        <span class="skill-title">Técnica</span>
-        <div class="skill-tags">
-          <span class="skill-tag">Impresión 3D</span>
-          <span class="skill-tag">Prototipado físico</span>
-          <span class="skill-tag">Validación funcional</span>
-        </div>
-      </div>
-
-      <div class="skill-block">
-        <span class="skill-title">Software</span>
-        <div class="skill-tags">
-          <span class="skill-tag">SolidWorks</span>
-          <span class="skill-tag">Inventor</span>
-          <span class="skill-tag">Fusion 360</span>
-          <span class="skill-tag">3ds Max</span>
-          <span class="skill-tag">Illustrator</span>
-          <span class="skill-tag">InDesign</span>
-          <span class="skill-tag">Animate</span>
-          <span class="skill-tag">Photoshop</span>
-          <span class="skill-tag">GitHub</span>
-        </div>
-      </div>
-
+    <div class="software-grid fade-up delay-2">
+      <div class="software-item">SolidWorks</div>
+      <div class="software-item">Autodesk Inventor</div>
+      <div class="software-item">Fusion 360</div>
+      <div class="software-item">AutoCAD</div>
+      <div class="software-item">3ds Max</div>
+      <div class="software-item">Illustrator</div>
+      <div class="software-item">InDesign</div>
+      <div class="software-item">Animate</div>
+      <div class="software-item">Photoshop</div>
+      <div class="software-item">GitHub</div>
+      <div class="software-item">Impresión 3D</div>
     </div>
   </div>
 </section>
+
 
 
 
