--- a/index.html
+++ b/index.html
@@ -644,27 +644,40 @@ footer{
   }
 }
 
- /* ===== SKILLS GRID ===== */
+ /* ===== SKILLS BLOCK ===== */
+
+.skills-block{
+  margin-top: 42px;
+}
+
+.skills-title{
+  font-size: 11px;
+  letter-spacing: .22em;
+  text-transform: uppercase;
+  color: var(--muted);
+  margin-bottom: 18px;
+}
+
+/* ===== GRID ===== */
 
 .skills-grid{
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  gap: 24px;
-  margin-top: 42px;
+  gap: 18px;
 }
 
 /* ===== SKILL ITEM ===== */
 
 .skill-item{
-  height: 110px;
+  height: 88px;                 /* más pequeño */
   display: flex;
-  align-items: center;        /* centrado vertical */
-  justify-content: center;    /* centrado horizontal */
+  align-items: center;
+  justify-content: center;
 
-  border: 1.6px solid rgba(255,255,255,0.3);
-  border-radius: 18px;
+  border: 1.4px solid rgba(255,255,255,0.28);
+  border-radius: 16px;
 
-  font-size: 12px;
+  font-size: 11px;
   letter-spacing: .18em;
   text-transform: uppercase;
   color: var(--white);
@@ -676,16 +689,15 @@ footer{
     transform .35s ease;
 }
 
-/* Items más anchos (técnica & procesos) */
-.skill-wide{
-  grid-column: span 2;
+.skill-item:hover{
+  border-color: rgba(255,255,255,0.5);
+  background: rgba(255,255,255,0.045);
+  transform: translateY(-1.5px);
 }
 
-/* Hover minimal premium */
-.skill-item:hover{
-  border-color: rgba(255,255,255,0.55);
-  background: rgba(255,255,255,0.045);
-  transform: translateY(-2px);
+/* items anchos */
+.skill-wide{
+  grid-column: span 2;
 }
 
   
@@ -833,30 +845,42 @@ footer{
   </div>
 </section>
 
- <section id="skills" class="section">
+<section id="skills" class="section">
   <div class="content">
     <h2 class="fade-up">Habilidades</h2>
 
-    <div class="skills-grid fade-up delay-2">
-
-      <!-- MODELADO 3D -->
-      <div class="skill-item">Inventor</div>
-      <div class="skill-item">Fusion 360</div>
-      <div class="skill-item">SolidWorks</div>
-      <div class="skill-item">3ds Max</div>
-      <div class="skill-item">AutoCAD</div>
-
-      <!-- DISEÑO GRÁFICO -->
-      <div class="skill-item">Animate</div>
-      <div class="skill-item">Photoshop</div>
-      <div class="skill-item">Illustrator</div>
-      <div class="skill-item">InDesign</div>
-
-      <!-- TÉCNICA & PROCESOS -->
-      <div class="skill-item skill-wide">Prototipado manual</div>
-      <div class="skill-item skill-wide">Impresión 3D</div>
-
+    <!-- MODELADO 3D -->
+    <div class="skills-block fade-up delay-1">
+      <h3 class="skills-title">Modelado 3D</h3>
+      <div class="skills-grid">
+        <div class="skill-item">Inventor</div>
+        <div class="skill-item">Fusion 360</div>
+        <div class="skill-item">SolidWorks</div>
+        <div class="skill-item">3ds Max</div>
+        <div class="skill-item">AutoCAD</div>
+      </div>
     </div>
+
+    <!-- DISEÑO GRÁFICO -->
+    <div class="skills-block fade-up delay-2">
+      <h3 class="skills-title">Diseño gráfico</h3>
+      <div class="skills-grid">
+        <div class="skill-item">Animate</div>
+        <div class="skill-item">Photoshop</div>
+        <div class="skill-item">Illustrator</div>
+        <div class="skill-item">InDesign</div>
+      </div>
+    </div>
+
+    <!-- TÉCNICA & PROCESOS -->
+    <div class="skills-block fade-up delay-2">
+      <h3 class="skills-title">Técnica y procesos</h3>
+      <div class="skills-grid">
+        <div class="skill-item skill-wide">Prototipado manual</div>
+        <div class="skill-item skill-wide">Impresión 3D</div>
+      </div>
+    </div>
+
   </div>
 </section>
 
