--- a/index.html
+++ b/index.html
@@ -669,13 +669,13 @@ footer{
 /* ===== SKILL ITEM ===== */
 
 .skill-item{
-  height: 88px;                 /* más pequeño */
+  height: 68px;                 /* ← MÁS BAJITO */
   display: flex;
   align-items: center;
   justify-content: center;
 
   border: 1.4px solid rgba(255,255,255,0.28);
-  border-radius: 16px;
+  border-radius: 14px;          /* un poco más fino */
 
   font-size: 11px;
   letter-spacing: .18em;
@@ -692,8 +692,9 @@ footer{
 .skill-item:hover{
   border-color: rgba(255,255,255,0.5);
   background: rgba(255,255,255,0.045);
-  transform: translateY(-1.5px);
+  transform: translateY(-1px);  /* hover más sutil */
 }
+
 
 /* items anchos */
 .skill-wide{
