--- a/index.html
+++ b/index.html
@@ -650,6 +650,9 @@ footer{
   margin-top: 30px;
 }
 
+.skills-block:first-of-type{
+  margin-top: 6px;    /* ← mucho más cerca del h2 */
+}
 .skills-title{
   font-size: 11px;
   letter-spacing: .22em;
