--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@ footer{
 
 .skill-item{
   height: 50px;
-  padding: 0 22px;              /* ← CLAVE: mismo margen lateral */
+  padding: 0 22px;
 
   display: flex;
   align-items: center;
@@ -704,7 +704,6 @@ footer{
 
 /* items anchos */
 .skill-wide{
-  grid-column: span 2;
   padding: 0 14px;   /* ← compensación visual */
 
 }
