--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@ footer{
     <div class="skills-block fade-up delay-2">
       <h3 class="skills-title">Técnica y procesos</h3>
       <div class="skills-grid">
-        <div class="skill-item skill-wide">Prototipado manual</div>
+        <div class="skill-item skill-wide">Prototipado</div>
         <div class="skill-item skill-wide">Impresión 3D</div>
       </div>
     </div>
