--- a/index.html
+++ b/index.html
@@ -871,12 +871,13 @@ footer{
 
     <!-- DISEÑO GRÁFICO -->
     <div class="skills-block fade-up delay-2">
-      <h3 class="skills-title">Diseño gráfico</h3>
+      <h3 class="skills-title">Diseño gráfico y web</h3>
       <div class="skills-grid">
         <div class="skill-item">Animate</div>
         <div class="skill-item">Photoshop</div>
         <div class="skill-item">Illustrator</div>
         <div class="skill-item">InDesign</div>
+        <div class="skill-item">Github</div>
       </div>
     </div>
 
@@ -886,6 +887,8 @@ footer{
       <div class="skills-grid">
         <div class="skill-item skill-wide">Prototipado</div>
         <div class="skill-item skill-wide">Impresión 3D</div>
+        <div class="skill-item skill-wide">Corte láser</div>
+
       </div>
     </div>
 
