--- a/index.html
+++ b/index.html
@@ -469,6 +469,8 @@ footer{
   color: var(--white);
   background: transparent;
   transition: border-color .35s ease, transform .35s ease;
+  transform: translateX(-18px);
+
 }
 
 
@@ -713,12 +715,13 @@ footer{
   opacity: 0;
   transform: translateX(-24px);
   animation: contactIn 0.9s cubic-bezier(.22,.61,.36,1) forwards;
+  animation-delay: .6s;   /* ← espera inicial como el resto del contenido */
 }
 
-/* Delays progresivos */
-.contact-item:nth-child(1){ animation-delay: .15s; }
-.contact-item:nth-child(2){ animation-delay: .3s; }
-.contact-item:nth-child(3){ animation-delay: .45s; }
+/* Delays progresivos (se suman al delay base) */
+.contact-item:nth-child(1){ animation-delay: .6s; }
+.contact-item:nth-child(2){ animation-delay: .75s; }
+.contact-item:nth-child(3){ animation-delay: .9s; }
 
 @keyframes contactIn{
   to{
@@ -726,6 +729,7 @@ footer{
     transform: translateX(0);
   }
 }
+
 
   
 </style>
